syntax = "proto3";

package smartcore.bos.history.v1;

option go_package = "github.com/smart-core-os/sc-bos/pkg/proto/historypb";

import "google/protobuf/timestamp.proto";

// HistoryAdminApi provides remote access to the history store.
service HistoryAdminApi {
  rpc CreateHistoryRecord(CreateHistoryRecordRequest) returns (HistoryRecord);
  rpc ListHistoryRecords(ListHistoryRecordsRequest) returns (ListHistoryRecordsResponse);
}

// HistoryRecord is a generic record of a device's state at a point in time.
// Prefer using trait specific record types where possible.
message HistoryRecord {
  string id = 1;
  string source = 2;
  google.protobuf.Timestamp create_time = 3;
  bytes payload = 4;

  message Query {
    oneof source {
      string source_equal = 1;
    }
    // The bounding records to select: from_record <= record < to_record.
    // ID or create_time (in that order) will be used for result selection.
    HistoryRecord from_record = 10;
    HistoryRecord to_record = 11;
  }
}

message CreateHistoryRecordRequest {
  string name = 1;
  // The record to create.
  // The id and create_time fields must be absent.
  HistoryRecord record = 2;
}

message ListHistoryRecordsRequest {
  string name = 1;
  // The maximum number of records to return.
  // The service may return fewer than this value.
  // If unspecified, at most 50 items will be returned.
  // The maximum value is 1000; values above 1000 will be coerced to 1000.
  int32 page_size = 2;
  // A page token, received from a previous `ListHistoryRecords` call.
  // Provide this to retrieve the subsequent page.
  string page_token = 3;
  // Specify the order of the returned records.
  // The default is `create_time asc` - aka oldest record first.
  // The format is `field_name [asc|desc]`, with asc being the default.
  // Only `create_time` is supported.
  string order_by = 5;

  HistoryRecord.Query query = 4;

}

message ListHistoryRecordsResponse {
  repeated HistoryRecord records = 1;

  // A token, which can be sent as `page_token` to retrieve the next page.
  // If this field is omitted, there are no subsequent pages.
  string next_page_token = 2;
  // If non-zero this is the total number of records matched by the query.
  // This may be an estimate.
  int32 total_size = 3;
}
